plugins {
    id 'java'
    id 'io.quarkus'
    id 'jacoco'
    id "org.sonarqube" version "7.2.2.6593"
}
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}
repositories {
    mavenCentral()
    mavenLocal()
}

dependencies {
    implementation enforcedPlatform("${quarkusPlatformGroupId}:${quarkusPlatformArtifactId}:${quarkusPlatformVersion}")
    implementation 'io.quarkus:quarkus-arc'
    implementation 'io.quarkus:quarkus-rest'
    testImplementation 'io.quarkus:quarkus-junit5'
    testImplementation 'io.rest-assured:rest-assured'
    testImplementation("org.mockito:mockito-core:5.20.0")
    testImplementation("org.mockito:mockito-junit-jupiter:5.20.0")

    // JSON Logging
    implementation("io.quarkus:quarkus-logging-json")

    //JSON and serialization + deserialization
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.20.1'
    implementation "org.reflections:reflections:0.10.2"

    //Rest
    implementation 'io.quarkus:quarkus-rest-jackson'

    //API validation
    implementation("io.quarkus:quarkus-hibernate-validator")

    //JSON WEB TOKEN (JWT)
    implementation("io.quarkus:quarkus-smallrye-jwt")
    implementation("io.quarkus:quarkus-smallrye-jwt-build")

    //Websocket
    implementation("io.quarkus:quarkus-websockets-next")

    //Lombok
    implementation 'org.projectlombok:lombok:1.18.30'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'

    //OpenApi
    implementation 'io.quarkus:quarkus-smallrye-openapi'
}

group = 'dk.mathiaskofod'
version = '1.0.0'

sonar {
    properties {
        property "sonar.projectKey", "beeracademy-backend"
        property "sonar.organization", "mathias"
        property "sonar.branch.name", "main"
    }
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

test {
    systemProperty "java.util.logging.manager", "org.jboss.logmanager.LogManager"
    jvmArgs "--add-opens", "java.base/java.lang=ALL-UNNAMED"
}
compileJava {
    options.encoding = 'UTF-8'
    options.compilerArgs << '-parameters'
}

compileTestJava {
    options.encoding = 'UTF-8'
}
tasks.withType(Test).configureEach {
    jvmArgs "-javaagent:${configurations.testRuntimeClasspath.find { it.name.contains('mockito-core') }.absolutePath}"
}
test {
    finalizedBy jacocoTestReport
}
jacocoTestReport {
    dependsOn test
    reports {
        xml.required = true
        html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
    }
}
jacoco {
    toolVersion = "0.8.13"
}


